--- a/.env.example
+++ b/.env.example
@@ -12,13 +12,6 @@
 # Drizzle
 DATABASE_URL="postgresql://postgres:password@localhost:5432/souvlaki-chat"
 
-# Next Auth
-# You can generate a new secret on the command line with:
-# openssl rand -base64 32
-# https://next-auth.js.org/configuration/options#secret
-# NEXTAUTH_SECRET=""
-NEXTAUTH_URL="http://localhost:3000"
-
-# Next Auth Google Provider
-GOOGLE_CLIENT_ID=""
-GOOGLE_CLIENT_SECRET=""
+# Example:
+# SERVERVAR="foo"
+# NEXT_PUBLIC_CLIENTVAR="bar"
