--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,10 @@
 # Drizzle
 DATABASE_URL="postgresql://postgres:password@localhost:5432/souvlaki-chat"
 
+# Clerk
+NEXT_PUBLIC_CLwERK_PUBLISHABLE_KEY="change-me"
+CLERK_SECRET_KEY="change-me"
+
 # Example:
 # SERVERVAR="foo"
 # NEXT_PUBLIC_CLIENTVAR="bar"
